--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "cryptojs": "^2.5.3",
+    "csurf": "^1.10.0",
     "dotenv": "^16.4.7",
     "expres": "^0.0.5",
     "express": "^4.21.2",
